tests/not-arrow-ty/out.txt
error: not a function type: int
  ┌─ err.sml:1:9
  │
1 │ val _ = 3 3
  │         ^^^

typechecking failed
